# CapStone2024

./: .gitignore  CapStone2024.code-workspace  README.md  plan.txt
Carte/: Cargo.toml
Carte/src/: cgroups.rs  main.rs  namespace.rs  process.rs
asset_go_gin/: assetHandlers.go  go.mod  go.sum  main.go
asset_go_gin/templates/: asset_upload.html
asset_login_go/: .env  go.mod  go.sum  main.go
asset_login_go/db/: connect.go  go.mod
asset_login_go/handler/: go.mod  logIn.go  signUp.go
asset_login_go/hashing/: go.mod  hash.go  jwt.go
asset_login_go/html_test/: login.html
asset_login_go/models/: users.go
asset_rust_actixweb/: Cargo.toml
asset_rust_actixweb/src/: asset.rs  main.rs
asset_rust_actixweb/src/static/: asset_info.html
asset_rust_actixweb/uploads/files/: file_sample.fbx
asset_server/: asset.go  go.mod  go.sum  main.go  mongodb_auth.json
asset_server/html/: footer.html  header.html  info.html  result.html  send.html
asset_server_go/src/: go.mod  main.go
asset_server_go/src/asset/: asset.go  go.mod
asset_server_go/src/db/: db.go  go.mod
asset_server_go/src/tcp/: go.mod  tcp.go
asset_server_rust/: Cargo.toml
asset_server_rust/src/: config.rs  error.rs  main.rs
asset_server_rust/src/asset/: asset_db.rs  db_schema.txt  error.rs  mod.rs
docker_test_ci/: Dockerfile  main.py  request.py
dockerapi/: exam.txt  go.mod  go.sum  main.go
rustweb/: Cargo.toml
rustweb/src/: main.rs
src/: main.go
src/asset/: asset.go
test/: test.txt
