[package]
name = "asset_rust_actixweb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
mongodb = "2"
tokio = { version = "1", features = ["full"] }
actix-files = "0.6"
futures = "0.3"
bson = "1.2"
actix-multipart = "0.4"
serde_json = "1.0"
sanitize-filename = "0.3"
html-entities = "0.1.0"
percent-encoding = "2.1.0"