[package]
name = "asset_server_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
mysql_async = "0.33.0"
image = "0.24.8"
futures = "0.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }